duvet/src/analysis/snapshots/duvet__analysis__tokenizer__tests__empty.snap
---
source: duvet/src/analysis/tokenizer.rs
assertion_line: 208
expression: "parser.parse(&arcstr::literal!(\"\"))"

---
Tokens(
    [],
)
