duvet/src/analysis/snapshots/duvet__analysis__tokenizer__tests__only_unnamed.snap
---
source: duvet/src/analysis/tokenizer.rs
assertion_line: 219
expression: "parser.parse(&arcstr::literal!(r#\"\n        //= this is meta\n        //= this is other meta\n        \"#))"

---
Tokens(
    [
        UnnamedMeta {
            location: Location {
                line: 1,
                indent: 8,
            },
            value: "this is meta",
        },
        UnnamedMeta {
            location: Location {
                line: 2,
                indent: 8,
            },
            value: "this is other meta",
        },
    ],
)
